09-week_six_multi-az_RDS/rds.tf
resource "aws_db_instance" "name" {
    allocated_storage = var.aws_db_intance.allocated_storage
    engine = var.aws_db_intance.engine
    engine_version = var.aws_db_intance.engine_version
    instance_class = var.aws_db_intance.instance_class
    username = var.aws_db_intance.username
    password = var.aws_db_intance.password
    skip_final_snapshot = true
    db_subnet_group_name = aws_db_subnet_group.ForgTech_subnet_group.name
    vpc_security_group_ids = [aws_security_group.rds_sg.id, aws_security_group.server_sg.id]
    storage_encrypted = true
    multi_az = true
    deletion_protection = false
    tags = var.tags_all
}
